add sql statement

--- a/lesson-06/index.html
+++ b/lesson-06/index.html
@@ -31,7 +31,7 @@
             type: 'cartodb'
             , sublayers: [
                 {
-                    sql: "< sql statement selecting from CARTO table >"
+                    sql: "SELECT * FROM uninsured_adults_county"
                     , cartocss: // string of CartoCSS rules for styling the layer
         }
     ]
