--- a/lesson-06/index.html
+++ b/lesson-06/index.html
@@ -20,10 +20,12 @@
 <body>
     <div id="map"></div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
+    <!--    cartocss rules go here-->
+    <script type="cartocss/html" id="counties-styles"> #layer { polygon-fill: ramp([uninsured], (#ffffb2, #fecc5c, #fd8d3c, #f03b20, #bd0026), jenks); line-width: 1; line-color: #FFF; line-opacity: 0.5; } </script>
     <script>
         // your JS here
         var map = L.map('map', {
-            center: [40, -95]
+            center: [-10, 0]
             , zoom: 4.5
         });
         var cartoCSS = "#layer {" + "polygon-fill: ramp([uninsured], (#ffffb2, #fed976, #feb24c, #fd8d3c, #fc4e2a, #e31a1c, #b10026), jenks);" + "line-width: 1;" + "line-color: #FFF;" + "line-opacity: 0.5;" + "}";
@@ -32,8 +34,8 @@
             type: 'cartodb'
             , sublayers: [
                 {
-                    sql: "SELECT * FROM uninsured_adults_county"
-                    , cartocss: cartoCSS // string of CartoCSS rules for styling the layer
+                    sql: "SELECT ST_Transform(the_geom, 2163) AS the_geom_webmercator, cartodb_id, uninsured FROM uninsured_adults_county"
+                    , cartocss: $("#counties-styles").text() // string of CartoCSS rules for styling the layer
         }
     ]
         }
