--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -20,21 +20,22 @@
 <body>
     <div id="map"></div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
+    <script type="cartocss/html" id="counties-styles"> #layer { polygon-fill: ramp([bdpercent], (#d2fbd4, #8eccb9, #559c9e, #2b6c7f, #123f5a), quantiles); line-width: 1; line-color: #FFF; line-opacity: 0.5; }</script>
     <script>
         // your JS here
         var map = L.map('map', {
             center: [-6, 4], // map center
             zoom: 5.3 // initial zoom level
-        });
-        var cartoCSS = "#layer {" + "polygon-fill: ramp([bdpercent], (#d2fbd4, #8eccb9, #559c9e, #2b6c7f, #123f5a), quantiles);" + "line-width: 1;" + "line-color: #FFF;" + "line-opacity: 0.5;" + "}";
+        }); // set this up to show contiguous US on map load
         var sourceObject = {
             // string of your CARTO user name
             user_name: 'mikus31'
             , type: 'cartodb'
             , sublayers: [
                 {
-                    sql: "SELECT ST_Transform(the_geom, 2163) AS the_geom_webmercator, cartodb_id, bdpercent FROM uscounty_education"
-                    , cartocss: cartoCSS // string of CartoCSS rules for styling the layer
+                    sql: "SELECT ST_Transform(the_geom, 2163) AS the_geom_webmercator, cartodb_id, bdpercent FROM uscounty_education" // reprojects and displays on map
+                        
+                    , cartocss: $("#counties-styles").text() // style for counties that lives above this block of script
         }
     ]
         }
