--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -14,14 +14,12 @@
             padding: 0;
             margin: 0;
         }
-        
-        ,
-        #title {}
     </style>
 </head>
 
 <body>
-    <div id="title"></div>
+    <!--<div id="title">
+    <h1>THE UNDEREDUCATED STATES OF AMERICA</h1></div>-->
     <div id="map"></div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
     <script type="cartocss/html" id="counties-styles"> #layer ['mapnik::geometry_type'=2] { line-color: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer ['mapnik::geometry_type'=3] { polygon-fill: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer { line-width: 1; line-opacity: 0.5; }</script>
