--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <style>
         html,
         body,
@@ -14,12 +15,22 @@
             padding: 0;
             margin: 0;
         }
+        
+        ,
+        #title {
+            position: absolute;
+        }
+        
+        ,
+        h1 {
+            font-family: 'Slabo 27px', serif;
+        }
     </style>
 </head>
 
 <body>
-    <!--<div id="title">
-    <h1>THE UNDEREDUCATED STATES OF AMERICA</h1></div>-->
+    <div id="title">
+        <h1>THE UNDEREDUCATED STATES OF AMERICA</h1></div>
     <div id="map"></div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
     <script type="cartocss/html" id="counties-styles"> #layer ['mapnik::geometry_type'=2] { line-color: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer ['mapnik::geometry_type'=3] { polygon-fill: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer { line-width: 1; line-opacity: 0.5; }</script>
