add css for title but i can't get it to reposition

--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>673 Module 07 Carto Starter Template</title>
+    <title>Bachelor's or Better</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
@@ -18,7 +18,9 @@
         
         ,
         #title {
-            position: absolute;
+            position: fixed;
+            left: 200px;
+            top: 300px;
         }
         
         ,
@@ -29,9 +31,10 @@
 </head>
 
 <body>
-    <div id="title">
-        <h1>THE UNDEREDUCATED STATES OF AMERICA</h1></div>
-    <div id="map"></div>
+    <div id="map">
+        <div id="title">
+            <h1>THE UNDEREDUCATED STATES OF AMERICA</h1></div>
+    </div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
     <script type="cartocss/html" id="counties-styles"> #layer ['mapnik::geometry_type'=2] { line-color: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer ['mapnik::geometry_type'=3] { polygon-fill: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer { line-width: 1; line-opacity: 0.5; }</script>
     <script type="cartocss/html" id="land-styles"> #na_land_clipped['mapnik::geometry_type'=1] { marker-width: 7; marker-fill: #FFB927; marker-fill-opacity: 0.9; marker-line-color: #FFF; marker-line-width: 1; marker-line-opacity: 1; marker-placement: point; marker-type: ellipse; marker-allow-overlap: true; } #na_land_clipped['mapnik::geometry_type'=2] { line-color: #3EBCAE; line-width: 1.5; line-opacity: 1; } #na_land_clipped['mapnik::geometry_type'=3] { polygon-fill: #374C70; polygon-opacity: 0.9; polygon-gamma: 0.5; line-color: #FFF; line-width: 1; line-opacity: 0.5; line-comp-op: soft-light; } </script>
