--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Bachelor's or Better</title>
+    <title>Bachelor's Or Better</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
@@ -16,16 +16,16 @@
             margin: 0;
         }
         
-        ,
         #title {
-            position: fixed;
-            left: 200px;
-            top: 300px;
+            position: absolute;
+            left: 450px;
+            top: 75px;
+            z-index: 1;
         }
         
-        ,
         h1 {
             font-family: 'Slabo 27px', serif;
+            font-size: 35px;
         }
     </style>
 </head>
