update map title

--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -18,9 +18,13 @@
         
         #title {
             position: absolute;
-            left: 450px;
-            top: 75px;
-            z-index: 1;
+            right: 25px;
+            top: 25px;
+            background-color: whitesmoke;
+            z-index: 650;
+            padding: 5px 10px;
+            border-radius: 50px;
+            margin: 0;
         }
         
         h1 {
