--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -31,6 +31,18 @@
             font-family: 'Slabo 27px', serif;
             font-size: 35px;
         }
+        
+        #textbox {
+            /*            css rules go here*/
+            position: absolute;
+            right: 75px;
+            top: 400px;
+            background-color: whitesmoke;
+            z-index: 650;
+            padding: 5px 10px;
+            border-radius: 50px;
+            margin: 0;
+        }
     </style>
 </head>
 
@@ -38,6 +50,7 @@
     <div id="map">
         <div id="title">
             <h1>THE UNDEREDUCATED STATES OF AMERICA</h1></div>
+        <div id="textbox"></div>
     </div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
     <script type="cartocss/html" id="counties-styles"> #layer ['mapnik::geometry_type'=2] { line-color: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer ['mapnik::geometry_type'=3] { polygon-fill: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer { line-width: 1; line-opacity: 0.5; }</script>
