--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -54,6 +54,13 @@
             font-size: 15px;
             width: 300px;
         }
+        
+        .cartodb-legend {
+            font-family: 'Slabo 27px', serif;
+            position: fixed;
+            left: 25px;
+            width: 240px;
+        }
     </style>
 </head>
 
@@ -68,19 +75,19 @@
                 <br>Map created by <a href="https://mikus31.github.io/">Michael McNeil</a></p>
         </div>
         <div class='cartodb-legend choropleth'>
-            <div class="legend-title">Population</div>
+            <div class="legend-title">% OF DEGREE-HOLDERS PER COUNTY</div>
             <ul>
-                <li class="min"> 1256 </li>
-                <li class="max"> 8300 </li>
+                <li class="min"> 1.90% </li>
+                <li class="max"> 78.8% </li>
                 <li class="graph count_441">
                     <div class="colors">
-                        <div class="quartile" style="background-color:#FFFFB2"></div>
-                        <div class="quartile" style="background-color:#FED976"></div>
-                        <div class="quartile" style="background-color:#FEB24C"></div>
-                        <div class="quartile" style="background-color:#FD8D3C"></div>
-                        <div class="quartile" style="background-color:#FC4E2A"></div>
-                        <div class="quartile" style="background-color:#E31A1C"></div>
-                        <div class="quartile" style="background-color:#B10026"></div>
+                        <div class="quartile" style="background-color:#008080"></div>
+                        <div class="quartile" style="background-color:#70a494"></div>
+                        <div class="quartile" style="background-color:#b4c8a8"></div>
+                        <div class="quartile" style="background-color:#f6edbd"></div>
+                        <div class="quartile" style="background-color:#edbb8a"></div>
+                        <div class="quartile" style="background-color:#de8a5a"></div>
+                        <div class="quartile" style="background-color:#ca562c"></div>
                     </div>
                 </li>
             </ul>
