update position of cartodb-legend

--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -57,7 +57,7 @@
         
         .cartodb-legend {
             font-family: 'Slabo 27px', serif;
-            position: fixed;
+            position: absolute;
             left: 25px;
             width: 240px;
         }
