--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -71,7 +71,7 @@
             <h2>About This Map</h2>
             <p>As of 2015, less than a third of American adults possess a Bachelor's Degree or better from colleges and universities. The map shows the percentage of American adults with a degree per United States county or parish.</p>
             <p>Data Source: <a href="https://www.data.gov/">Data.gov</a>
-                <br>Map created by <a href="https://mikus31.github.io/">Michael McNeil</a></p>
+                <br>Map design by <a href="https://mikus31.github.io/">Michael McNeil</a></p>
         </div>
         <div class='cartodb-legend choropleth'>
             <div class="legend-title">% OF DEGREE-HOLDERS PER COUNTY</div>
