--- a/lab-06/index.html
+++ b/lab-06/index.html
@@ -73,6 +73,7 @@
             <p>Data Source: <a href="https://www.data.gov/">Data.gov</a>
                 <br>Map design by <a href="https://mikus31.github.io/">Michael McNeil</a></p>
         </div>
+        <!--        add div code for info legend-->
         <div class='cartodb-legend choropleth'>
             <div class="legend-title">% OF DEGREE-HOLDERS PER COUNTY</div>
             <ul>
@@ -91,6 +92,8 @@
                 </li>
             </ul>
         </div>
+        <!--        add div code for info window-->
+        <!--        copied the code from builder originally but could not get it to work below-->
     </div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
     <script type="cartocss/html" id="counties-styles"> #layer ['mapnik::geometry_type'=2] { line-color: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer ['mapnik::geometry_type'=3] { polygon-fill: ramp([bdpercent], cartocolor(Geyser, 10), quantiles); } #layer { line-width: 1; line-opacity: 0.5; }</script>
@@ -99,8 +102,8 @@
     <script>
         // your JS here
         var map = L.map('map', {
-            center: [-6, 4], // map center
-            zoom: 5.3 // initial zoom level
+            center: [-4.5, 6], // map center
+            zoom: 5.5 // initial zoom level
         }); // set this up to show contiguous US on map load
         var sourceObject = {
             // string of your CARTO user name
@@ -122,6 +125,7 @@
     ]
         }
         cartodb.createLayer(map, sourceObject).addTo(map);
+        // append code here to add info window to map. tried figuring out the FAQ from cartoCSS documentation but could not get the info window to load property. wondering if i should not use the div code block for the info window from builder.
     </script>
 </body>
 
